# rag_and_roll

./: .gitignore  00_essential_snippets.ipynb  01_essential_base_wikipedia.ipynb  01_essential_node_readers.ipynb  02_essential_advance_todo.ipynb  02_essential_challenge.ipynb  02_essential_md_reader.ipynb  0_hands_on_1.ipynb  11_essential_base_webpage.ipynb  12_essential_advance_example.ipynb  12_essential_challenge.ipynb  1_hands_on_2.ipynb  LICENSE  README.md  pyproject.toml  test.py
lesson_01/: 02_essential_base_webpage.ipynb  03_essential_challenge.ipynb  11_hands_on_problem.ipynb  12_hands_on_solution.ipynb  21_hands_on_problem.ipynb  22_hands_on_solution.ipynb  31_hands_on_challenge_problem.ipynb  32_hands_on_challenge_solution.ipynb  README.md
lesson_01/playground/: 01_essential_base_wikipedia.ipynb  04_essential_challenge_v2.ipynb
lesson_02/: 11_hands_on_problem.ipynb  12_hands_on_solution.ipynb  21_hands_on_problem.ipynb  22_hands_on_solution.ipynb  README.md
