[project]
name = "rag-and-roll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "llama-index-readers-web>=0.2.4",
    "llama-index-readers-wikipedia>=0.2.0",
    "llama-index>=0.11.20",
    "rich>=13.9.3",
    "wikipedia>=1.4.0",
]
